# cpp_optimization

./: .gitignore  CMakeLists.txt  README.md  a.out  funcs.cpp  grads.cpp  main.cpp  matrix_factorization.cpp  optimization_dependencies.h  optimization_functions.cpp  temp.cpp
include/: funcs.h  grads.h  optimization.h
src/: funcs.cpp  grads.cpp  optimization.cpp
